--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ ul {
   top: 2rem;
   left: 50%;
   transform: translateX(-50%);
-  color: hsl(218, 22%, 67%);
+  color: hsl(217, 22%, 67%);
 }
 
 .attribution a {
@@ -40,6 +40,159 @@ ul {
 }
 
 .price-grid {
-  max-width: 63.5%;
+  max-width: 63.5rem;
   margin: 16.3rem auto 0 auto;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 15px 30px 0 rgba(0, 81, 171, 0.1488);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto auto;
+  overflow: hidden;
+}
+.price-grid__top {
+  grid-column: 1/span 2;
+  padding: 4rem 4rem 0 4rem;
+}
+.price-grid__top > h1 {
+  font-size: 2.4rem;
+  font-weight: 700;
+  letter-spacing: -0.3px;
+  margin-bottom: 2.4rem;
+  color: hsl(179, 62%, 43%);
+}
+.price-grid__top > h2 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  letter-spacing: -0.22px;
+  margin-bottom: 1.1rem;
+  line-height: 1.167;
+  color: hsl(71, 73%, 54%);
+}
+.price-grid__top > p {
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  margin-bottom: 4rem;
+  line-height: 1.625;
+  color: hsl(217, 22%, 67%);
+}
+.price-grid__pricing {
+  padding: 4rem;
+  background-color: hsl(179, 62%, 43%);
+  color: #fff;
+}
+.price-grid__pricing > h3 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  letter-spacing: -0.22px;
+  line-height: 1.167;
+  margin-bottom: 1.8rem;
+}
+.price-grid__price {
+  font-size: 3.2rem;
+  font-weight: 700;
+  line-height: 1.15625;
+  display: flex;
+  align-items: center;
+  margin-bottom: 0.4rem;
+}
+.price-grid__price > span {
+  font-size: 1.6rem;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  margin-left: 1.1rem;
+  color: rgba(255, 255, 255, 0.5);
+}
+.price-grid__benefit {
+  font-size: 1.6rem;
+  line-height: 1.625;
+  font-weight: 400;
+  letter-spacing: -0.2px;
+  margin-bottom: 2.6rem;
+}
+.price-grid__signup-btn {
+  border: none;
+  display: block;
+  width: 100%;
+  background-color: hsl(71, 73%, 54%);
+  color: #fff;
+  font-size: 1.6rem;
+  line-height: 1.1875;
+  padding: 1.5rem 0 1.4rem 0;
+  border-radius: 4px;
+  box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.0973);
+  cursor: pointer;
+}
+.price-grid__why {
+  padding: 4rem;
+  background-color: hsl(179, 62%, 43%);
+  position: relative;
+  overflow: hidden;
+}
+.price-grid__why::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #fff;
+  opacity: 0.1519;
+  z-index: 1;
+}
+.price-grid__why > h3 {
+  font-size: 1.8rem;
+  font-weight: 700;
+  letter-spacing: -0.22px;
+  line-height: 1.167;
+  margin-bottom: 1.8rem;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+}
+.price-grid__why > ul {
+  font-size: 1.4rem;
+  font-weight: 400;
+  letter-spacing: -0.17px;
+  line-height: 1.4285714285;
+  color: #fff;
+  opacity: 0.75;
+  position: relative;
+  z-index: 2;
+}
+
+@media only screen and (max-width: 690px) {
+  .price-grid {
+    max-width: 31.1rem;
+    margin: 7.2rem auto 0 auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+  }
+  .price-grid__top {
+    padding: 2.8rem 2.4rem 0 2.4rem;
+  }
+  .price-grid__top > h1 {
+    font-size: 2rem;
+    letter-spacing: -0.25px;
+  }
+  .price-grid__top > h2 {
+    font-size: 1.5rem;
+    letter-spacing: -0.19px;
+    line-height: 1.33334;
+    margin-bottom: 1.6rem;
+  }
+  .price-grid__top > p {
+    font-size: 1.4rem;
+    letter-spacing: -0.17px;
+    line-height: 1.8571528851;
+    margin-bottom: 3.2rem;
+  }
+  .price-grid__pricing {
+    padding: 2.4rem;
+  }
+  .price-grid__why {
+    padding: 2.4rem;
+  }
 }/*# sourceMappingURL=styles.css.map */
