--- a/css/styles.css
+++ b/css/styles.css
@@ -123,6 +123,10 @@ ul {
   border-radius: 4px;
   box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.0973);
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+.price-grid__signup-btn:hover, .price-grid__signup-btn:focus {
+  background-color: #b7d822;
 }
 .price-grid__why {
   padding: 4rem;
@@ -194,5 +198,8 @@ ul {
   }
   .price-grid__why {
     padding: 2.4rem;
+  }
+  .price-grid__signup-btn:hover, .price-grid__signup-btn:focus {
+    background-color: hsl(71, 73%, 54%);
   }
 }/*# sourceMappingURL=styles.css.map */
